<resources>
    <string name="app_name">TravelBase</string>

    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_detail">Detail</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_travel_list">TravelList</string>

    <string name="app_theme">Lets take a trip</string>
    <string name="login_faiure">Failed in login. Please confirm whether an account is registered. In the case of non-registration, an account, please register from a site
</string>
    <string name="logged_in">logged in…</string>
    <string name="system_error">An unexpected error occurred. Please retry later.</string>
    <string-array name="travel_list_tab_titles">
        <item>future travel</item>
        <item>past travel</item>
    </string-array>
    <string name="no_plan_of_travel">no plan of the travel</string>
    <string name="no_past_travel">no past travel</string>
    <string name="no_schedules">no scheules</string>
    <string name="route_title">way to %1$s</string>
    <string name="loading">Now Loading...</string>
    <string name="saving">Now Saving...</string>

    <string name="title_activity_place_detail">PlaceDetailActivity</string>
    <string name="title_activity_place_list">PlaceListActivity</string>
    <string-array name="place_detail_tab_titles">
        <item>detail</item>
        <item>map</item>
    </string-array>

    <string name="label_address">Address: </string>
    <string name="label_station">Station: </string>
    <string name="label_url">URL: </string>
    <string name="label_memo">Memo: </string>
    <string name="label_period">Period: </string>
    <string name="label_detail">Detail: </string>
    <string name="label_event_place">Place Name: </string>

    <string name="about_body"><![CDATA[
        <b>TravelBase</b><br>
        Version %s<br><br>
    ]]></string>

    <string name="about_licenses">Open Source Licenses</string>
    <string name="about_eula">End User License Agreement</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="title_about">About</string>
    <string name="title_activity_route_detail">RouteDetailActivity</string>
    <string name="linkt_to_places_map"><u>See a list of places in Map</u></string>
    <string name="twitter_login">login</string>
    <string name="title_activity_place_search">PlaceSearch</string>
    <string name="registration_place">Registration</string>
    <string name="registration_place_success">Registered the selected location</string>

    <string name="title_activity_event_detail">Event Detail</string>
    <string name="title_activity_event_list">Event List</string>
</resources>
