<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="event" type="xyz.yyagi.travelbase.model.Event"/>
        <variable name="place" type="xyz.yyagi.travelbase.model.Place"/>
    </data>

    <FrameLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/spacing_small"
        tools:context="xyz.yyagi.travelbase.ui.FragmentEventDetail">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:fillViewport="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="@string/label_period"
                    android:layout_marginLeft="5dp"
                    />
                <TextView
                    android:id="@+id/period"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/primary_text"
                    android:text="@{event.period}"
                    />
                <TextView
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="@string/label_detail"
                    android:layout_marginLeft="5dp"
                    />
                <TextView
                    android:id="@+id/detail"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/primary_text"
                    android:text="@{event.detail}"
                    />

                <TextView
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="@string/label_event_place"
                    android:layout_marginLeft="5dp"
                    />
                <TextView
                    android:id="@+id/address"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/primary_text"
                    android:text="@{place.name}"
                    />

                <TextView
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="@string/label_address"
                    android:layout_marginLeft="5dp"
                    />
                <TextView
                    android:id="@+id/address"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/primary_text"
                    android:text="@{place.address}"
                    />

                <TextView
                    android:textSize="14sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary"
                    android:text="@string/label_station"
                    android:layout_marginLeft="5dp"
                    />
                <TextView
                    android:id="@+id/station"
                    android:textSize="12sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/primary_text"
                    android:text="@{place.station_info}"
                    />

            </LinearLayout>
        </ScrollView>
    </FrameLayout>
</layout>
